# ffi-experimental

./: cabal.project  setup-cabal.sh  stack.yaml
.circleci/: config.yml  stack-config.yaml
codegen/src/: RenderCommon.hs
examples/: examples.cabal
examples/xor_mlp/: Main.hs
ffi/: ffi.cabal
ffi/example/: CppTest.hs
ffi/src/ATen/: Cast.hs
ffi/src/Aten/Managed/: Cast.hs
ffi/src/Aten/Managed/Type/: Tensor.hs
ffi/src/Aten/Unmanaged/Type/: Tensor.hs
ffi/src/Torch/Managed/: Autograd.hs
ffi/src/Torch/Unmanaged/: Autograd.hs
ffi/test/: BasicSpec.hs  MemorySpec.hs
hasktorch/: hasktorch.cabal
hasktorch/src/: Torch.hs
hasktorch/src/Torch/: Autograd.hs  DType.hs  Functions.hs  Tensor.hs  TensorFactories.hs  TensorOptions.hs
hasktorch/test/: GradSpec.hs
spec/cppclass/: tensor.yaml
static-ffi/: static-ffi.cabal
static-ffi/src/Torch/Static/: Native.hs
static-ffi/test/: ShapeSpec.hs
