name:                static-ffi
version:             0.2.0.0
synopsis:            ffi with static tensor
-- description:
homepage:            https://github.com/githubuser/ffi-experimental#readme
license:             BSD3
author:              Austin Huang
maintainer:          hasktorch@gmail.com
copyright:           2019 Austin Huang
category:            Codegen
build-type:          Simple
cabal-version:       >=1.10

library
 exposed-modules:     Torch.Static.Native
 hs-source-dirs:      src
 default-language:    Haskell2010
 build-depends:       base >= 4.7 && < 5
                    , ffi
                    , dimensions

test-suite spec
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  main-is:         Spec.hs
  other-modules:   ShapeSpec
  default-language: Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , static-ffi
                     , ffi
                     , hspec
                     , hspec-discover
                     , safe-exceptions
